# SafeGBPO

./: .gitignore  README.md  pyproject.toml
conf/: config.py  envs.py  experiment.py  learning_algorithms.py  safeguard.py
conf/algorithm/: ppo.py  sac.py  shac.py
conf/task/: envs.py  tasks.py  wrapper.py
experiments/: generator_scaling.py  generator_scaling_results.txt  optimisation_trajectories.py  zonotopic_approximation_scaling.py  zonotopic_approximation_scaling_results.txt
hyperparameters/BalanceCartPole/: ppo.py  shac.py
hyperparameters/BalancePendulum/: ppo.py  sac.py  shac.py  study.sqlite3
hyperparameters/BalanceQuadrotor/: ppo.py  sac.py  shac.py  study.sqlite3
hyperparameters/LoadBalanceHousehold/: loadbalance.sqlite3  ppo.py  sac.py  shac.py
hyperparameters/ManageHousehold/: shac.py
hyperparameters/NavigateSeeker/: sac.py  shac.py  study.sqlite3
paper_archive/: equation_check.ipynb  figures.ipynb  results.pt  timing_results.pt
presentation/: figures.ipynb
presentation(TODO delete post acceptance)/: figures.ipynb
src/: env_creator.py  hydra_registrator.py  loadbalance.sqlite3  logger.py  main.py  search_spaces.py  train.py  trainer.py  utils.py
src/algorithms/: actor_critic_algorithm.py  ppo.py  sac.py  shac.py
src/assets/: cartpole_ctrl_center.pt  cartpole_ctrl_generators_4.pt  cartpole_rci_center.pt  cartpole_rci_generators.pt  load_data.pt  outside_temperature_data.pt  pendulum_ctrl_center.pt  pendulum_ctrl_generators_2.pt  (+15 more)
tests/: env_test.py  linearisation_test.py  map_test.py  policy_test.py  rollout_buffer_test.py  safeguard_test.py  sets_test.py  shac_test.py  system_tests.py  value_function_test.py
(+60 files in other folders)
