[project]
name = "SafeGBPO"
version = "1.0"
description = "Repository to Leveraging Analytical Gradients for Provably Safe Reinforcement Learning"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.21.0",
    "cvxpy>=1.7.1",
    "cvxpylayers>=0.1.9",
    "gymnasium>=1.2.0",
    "imageio[ffmpeg]>=2.37.0",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "optuna>=4.4.0",
    "pillow>=11.3.0",
    "pytest>=8.4.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "wandb>=0.21.1",
]
